# Articles

./: .gitignore  README.md
Android 开发中集成 OpenCV (java, c++)，以及缩减 OpenCV 库大小/CvDemo1/: settings.gradle
Android 开发中集成 OpenCV (java, c++)，以及缩减 OpenCV 库大小/CvDemo1/app/: build.gradle
Android 开发中集成 OpenCV (java, c++)，以及缩减 OpenCV 库大小/CvDemo1/app/src/androidTest/java/com/cv/demo1/: ExampleInstrumentedTest.java
Android 开发中集成 OpenCV (java, c++)，以及缩减 OpenCV 库大小/CvDemo1/app/src/main/: AndroidManifest.xml
Android 开发中集成 OpenCV (java, c++)，以及缩减 OpenCV 库大小/CvDemo1/app/src/main/java/com/cv/demo1/: MainActivity.java
Android 开发中集成 OpenCV (java, c++)，以及缩减 OpenCV 库大小/CvDemo1/app/src/main/res/values/: strings.xml
Android 开发中集成 OpenCV (java, c++)，以及缩减 OpenCV 库大小/CvDemo1/app/src/test/java/com/cv/demo1/: ExampleUnitTest.java
Android 开发中集成 OpenCV (java, c++)，以及缩减 OpenCV 库大小/CvDemo1/openCVLibrary3410/: build.gradle
Android 开发中集成 OpenCV (java, c++)，以及缩减 OpenCV 库大小/CvDemo1/openCVLibrary3410/src/main/: AndroidManifest.xml
Android 开发中集成 OpenCV (java, c++)，以及缩减 OpenCV 库大小/CvDemo1/openCVLibrary3410/src/main/java/org/opencv/core/: Core.java
Android 开发中集成 OpenCV (java, c++)，以及缩减 OpenCV 库大小/CvDemo1/openCVLibrary3410/src/main/java/org/opencv/dnn/: Dnn.java  Net.java
Android 开发中集成 OpenCV (java, c++)，以及缩减 OpenCV 库大小/CvDemo1/openCVLibrary3410/src/main/java/org/opencv/imgcodecs/: Imgcodecs.java
Android 开发中集成 OpenCV (java, c++)，以及缩减 OpenCV 库大小/CvDemo1/openCVLibrary3410/src/main/java/org/opencv/imgproc/: Imgproc.java
Android 开发中集成 OpenCV (java, c++)，以及缩减 OpenCV 库大小/CvDemo1/openCVLibrary3410/src/main/java/org/opencv/objdetect/: QRCodeDetector.java
Android 开发中集成 OpenCV (java, c++)，以及缩减 OpenCV 库大小/CvDemo2/: settings.gradle
Android 开发中集成 OpenCV (java, c++)，以及缩减 OpenCV 库大小/CvDemo2/app/: build.gradle
Android 开发中集成 OpenCV (java, c++)，以及缩减 OpenCV 库大小/CvDemo2/app/src/androidTest/java/com/cv/cvdemo2/: ExampleInstrumentedTest.java
Android 开发中集成 OpenCV (java, c++)，以及缩减 OpenCV 库大小/CvDemo2/app/src/main/: AndroidManifest.xml
Android 开发中集成 OpenCV (java, c++)，以及缩减 OpenCV 库大小/CvDemo2/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
Android 开发中集成 OpenCV (java, c++)，以及缩减 OpenCV 库大小/CvDemo2/app/src/main/java/com/cv/cvdemo2/: MainActivity.java
Android 开发中集成 OpenCV (java, c++)，以及缩减 OpenCV 库大小/CvDemo2/app/src/main/res/values/: strings.xml
Android 开发中集成 OpenCV (java, c++)，以及缩减 OpenCV 库大小/CvDemo2/app/src/test/java/com/cv/cvdemo2/: ExampleUnitTest.java
Android 开发中集成 OpenCV (java, c++)，以及缩减 OpenCV 库大小/CvDemo3/: settings.gradle
Android 开发中集成 OpenCV (java, c++)，以及缩减 OpenCV 库大小/CvDemo3/app/: build.gradle
Android 开发中集成 OpenCV (java, c++)，以及缩减 OpenCV 库大小/CvDemo3/app/src/androidTest/java/com/edvard/cvdemo3/: ExampleInstrumentedTest.java
Android 开发中集成 OpenCV (java, c++)，以及缩减 OpenCV 库大小/CvDemo3/app/src/main/: AndroidManifest.xml
Android 开发中集成 OpenCV (java, c++)，以及缩减 OpenCV 库大小/CvDemo3/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
Android 开发中集成 OpenCV (java, c++)，以及缩减 OpenCV 库大小/CvDemo3/app/src/main/java/com/edvard/cvdemo3/: MainActivity.java
Android 开发中集成 OpenCV (java, c++)，以及缩减 OpenCV 库大小/CvDemo3/app/src/main/res/layout/: activity_main.xml
Android 开发中集成 OpenCV (java, c++)，以及缩减 OpenCV 库大小/CvDemo3/app/src/main/res/values/: strings.xml
Android 开发中集成 OpenCV (java, c++)，以及缩减 OpenCV 库大小/CvDemo3/app/src/test/java/com/edvard/cvdemo3/: ExampleUnitTest.java
[AR:MR 基础] 利用 iPhone X 的深度相机(TruthDepth Camera)获得像素点的三维坐标/Obtain3DCoordinate/Obtain3DCoordinate/: AppDelegate.swift  Info.plist  ViewController.swift
[AR:MR 基础] 利用 iPhone X 的深度相机(TruthDepth Camera)获得像素点的三维坐标/Obtain3DCoordinate/Obtain3DCoordinate.xcodeproj/: project.pbxproj
[AR:MR 基础] 利用 iPhone X 的深度相机(TruthDepth Camera)获得像素点的三维坐标/Obtain3DCoordinate/Obtain3DCoordinate.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
[AR:MR 基础] 利用 iPhone X 的深度相机(TruthDepth Camera)获得像素点的三维坐标/Obtain3DCoordinate/Obtain3DCoordinate.xcodeproj/project.xcworkspace/xcuserdata/edvard.xcuserdatad/: UserInterfaceState.xcuserstate
[AR:MR 基础] 利用 iPhone X 的深度相机(TruthDepth Camera)获得像素点的三维坐标/Obtain3DCoordinate/Obtain3DCoordinate.xcodeproj/xcuserdata/edvard.xcuserdatad/xcschemes/: xcschememanagement.plist
[AR:MR 基础] 利用 iPhone X 的深度相机(TruthDepth Camera)获得像素点的三维坐标/Obtain3DCoordinate/Obtain3DCoordinate/Base.lproj/: Main.storyboard
构建并用 TensorFlow Serving 部署 Wide&Deep 模型/: WDLRegression.py
神经网络中 BP 算法的原理与 Python 实现源码解析/: mnist_loader.py  network.py  test.py
